--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ body {
 .item {
     width: 341px;
     height: 300px;
-    background-color: #dddddd;
+    background-color: white;
     border: 0.1px solid grey;
 }
 
